--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		
 		<!-- keep the profile pic in the same folder as your index.html file-->
 	
-		<img src="C:\Users\SUMITH NAIK\Desktop\photo id.jpg" width="150" height="625" class="center">
+		<img src="C:\Users\SUMITH NAIK\Desktop\photo id.jpg" width="100" height="550" class="center">
 
 			<p>
 				I am <strong>SUMITH, Id:4NM18EC178, student of N M A M INSTITUTE OF TECHNOLOGY,NITTE, Electronics and Communication Engineering department,</strong> studying in 3rd year. I am passionate about technology trends and exploring different programming laguages to upskill towards industry needs. 
@@ -124,8 +124,8 @@
 
 		<footer id="main-footer">
 		<footer>
-			<p>End of Internship Report &copy; 2021, My Name</p>
-			<p>My Name, email id, contact:99999 99999</p>
+			<p>End of Internship Report &copy; 2021, SUMITH</p>
+			<p> sumith, sumithnaik990@gmail.com, contact:8971944093</p>
 		</footer>
 
 		<div style="margin-top: 50px"></div>
